--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -311,8 +311,7 @@ input:focus{
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                     </div>
                     <textarea type="text" class="form-control" id="firstName " name='description' placeholder="Note Description" rows="1" required=""></textarea>
-                </div>
-                    <br>                  
+                </div>              
                     <br>
                     <div class="row ml-1">
                         <div class="col-3">
@@ -322,10 +321,25 @@ input:focus{
                         </div>
                         <div class="col">
                                <div>
-                                <select class="form-control" name="course" required>
+                                <select class="form-control" id="select_course" name="course" required onchange="selectcourse()">
                                     {% for course in courses %}
-                                    <option value="{{course.courseName}}">{{course.courseName}}</option>
+                                    <option value="{{course.id}}">{{course.courseName}}</option>
                                     {% endfor %}
+                                </select>
+                                </div>
+                        </div>                      
+                    </div>
+                    <br>
+                    <div class="row ml-1">
+                        <div class="col-3">
+                           <div class="input-group form-group">
+                                <label class="control-label">Select Class</label>        
+                            </div>  
+                        </div>
+                    <div class="col">
+                               <div>
+                                <select class="form-control" id="class_select" name="forclass" required>
+                                    <option selected disabled>Select Class</option>
                                 </select>
                                 </div>
                         </div>                      
@@ -362,5 +376,29 @@ input:focus{
       }
     });
 </script>
-
+<script>
+    function selectcourse() {
+    var selected = $('#select_course').val();
+    console.log(selected)
+    $.ajax({
+      url: "{% url 'classes' %}",
+      data: {
+        course_id: selected,
+      },
+      success: function (data) {
+        categories = data.sub_categories;
+        $("#class_select").empty().trigger("change");
+        for (i = 0; i < categories.length; i++) {
+          var newOption = new Option(
+            categories[i].text,
+            categories[i].value,
+            false,
+            false
+          );
+          $("#class_select").append(newOption).trigger("change");
+        }
+      },
+    });
+  }
+</script>
 {% endblock main-content %}
