--- a/templates/Notes/allnotes.html
+++ b/templates/Notes/allnotes.html
@@ -19,6 +19,7 @@
                             <tr>
                                 <th>#</th>
                                 <th>Note Title</th>
+                                <th>Class</th>
                                 <th>Subject</th>
                                 <th>Description</th>
                                 <th class="text-center">View</th>  
@@ -27,6 +28,7 @@
                             <tr>
                                 <td>{{forloop.counter}}</td>
                                 <td><p style="color: black;font-size: 14px;">{{i.title}}</p></td>
+                                <td><p style="color: black;font-size: 14px;">{{i.forclass}}</p></td>
                                 <td><p style="color: black;font-size: 14px;">{{i.subject}}</p></td>
                                 <td>{{i.description}}</td>
                                 <td style="text-align: center;">
